# MD

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  bench.md  build  build.cmake  build.sh  build_tools.txt  compile_commands.json  default.profraw  import_std.cmake  log.cpp  main  main.cpp  main.profdata  out_3  outch.h  parser.cpp  read.ipynb  run  run.cmake  run.sh  stats.cpp  test  utils.py  watch.cmake  watch.sh
coverage_report_dir/: index.html
coverage_report_dir/coverage/Users/honeyspoon/projects/interview_rbc/: main.cpp.html
integration_tests/: test_json.py  test_list_symbols.py  test_stats.py  test_stream_split.py  test_symbol_filter.py
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
python_src/: build_utils.py  constants.py  log.py  pipeline.py
src/: log.h  main.cpp  ouch.h  outch.h  parser.cpp  parser.h  parser.test.cpp  reader.cpp  reader.h  stats.cpp  stats.h
src/exe/: hello.cpp  json.cpp  l1.cpp  list_symbols.cpp  ouch_stats.cpp  ouch_stream_split.cpp  stats.cpp  stream_split.cpp  symbol_filter.cpp
src/modules/: args.cpp  book.cpp  json.cpp  log.cpp  mlog.cpp  reader.cpp  writer.cpp
src/modules/ouch/: ouch.cpp  parser.cpp
